<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pen Pal</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_profile">ProfilePage</string>
    <string name="title_activity_message_sent">MessageSent</string>
    <string name="title_activity_receive_message">ReceiveMessage</string>
    <string name="title_activity_meet_pen_pal">Meet Pen Pal</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_make_message">MakeMessage</string>
    <string name="action_settings">Settings</string>
    <string name="home_button">Home</string>
    <string name="back_button">Back</string>
    <string name="action_home">Home</string>
    <string name="action_back">Back</string>
    <string name="hello_user">Welcome Back, Jack Jack!</string>

    <plurals name="unread_messages">
        <item quantity="one">You have 1 unread messages</item>
        <item quantity="other">You have %1$d unread messages</item>
    </plurals>

    <string name="friend_list_button">Friend\'s List</string>
    <string name="friend_list_text">My Friends</string>
    <string name="new_pen_pal_button">Make a New Pen Pal!</string>
    <string name="new_pen_pal_text">Make a New Pen Pal!</string>
    <string name="send_message_text">Send a message\n to %s!</string>
    <string name="message_sent_text">I sent a message to\n %s!</string>
    <string name="text_message">Write</string>
    <string name="draw_message">Draw</string>
    <string name="voice_message">Talk</string>
    <string name="from_user">From %1$s</string>
    <string name="to_user">To %1$s</string>
    <string name="reply_button">Reply</string>
    <string name="clear_button">Redo</string>
    <string name="research_pen_pal">Search Again</string>
    <string name="send_message_button">Send Message!</string>
    <string name="user_profile">%1$s</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="color">Color</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="eraser">Eraser</string>
    <string name="eraselast">Undo</string>
    <string name="eraseall">Erase All</string>
    <string name="next">Start!</string>
    <string name="smallsize">Small stroke</string>
    <string name="medsize">Medium stroke</string>
    <string name="largesize">Large stroke</string>
    <string name="erasers">Eraser</string>
    <string name="stroke">Stroke</string>
    <string name="location">%1$s is from %2$s</string>
    <string name="language">%1$s speaks %2$s</string>
    <string name="get_question_button">Throw me a question!</string>
    <string name="received_message"> Hi Jack Jack,\n How are you doing today?</string>
    <string name="start_record">Record Message</string>
    <string name="stop_record">Stop Recording</string>
    <string name="start_play">Play Message</string>
    <string name="stop_play">"Stop Playing"</string>
    <string name="pen_pal_details">Meet %1$s %2$s\n\n 
        %1$s is from %3$s\n\n 
        %1$s speaks %4$s</string>

    <string-array name="suggested_questions">
        <item>What are you learning in school? </item>
        <item>What did you eat for breakfast? </item>
        <item>What did you eat for dinner? </item>
        <item>What did you eat for lunch? </item>
        <item>What is your favorite food? </item>
        <item>What is your favorite class? </item>
        <item>What is your favorite sport? </item>
        <item>What is your favorite place? </item>
        <item>Have you ever been to a beach? </item>
        <item>Who is your hero? </item>
        <item>What is your favorite holiday? </item>
        <item>What do you like to do? </item>
        <item>What is your favorite fruit? </item>
        <item>What is your favorite carton character? </item>
        <item>What is your favorite movie? </item>
        <item>What is your favorite animal? </item>
        <item>Do you have a pet? </item>
    </string-array>

    <string name="internet_error">"I need to turn internet on to find a Pen Pal"</string>
    <string name="loading"> Finding a Pen Pal.  Please Wait...</string>
    <string name="send_another">Send Another</string>
    <string name="undo">undo</string>

</resources>