<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendMessage" >
    
        <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/toUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/send_message_text"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <Button
        android:id="@+id/textMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drawMessageButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:onClick="goToTextMessage"
        android:text="@string/text_message"
        android:textSize="35sp" />

    <Button
        android:id="@+id/voiceMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendMessageText"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="104dp"
        android:onClick="goToVoiceMessage"
        android:text="@string/voice_message"
        android:textSize="35sp" />

    <Button
        android:id="@+id/drawMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voiceMessageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="goToDrawMessage"
        android:text="@string/draw_message"
        android:textSize="35sp" />

</RelativeLayout>